<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">    
		<ListView  
			android:id="@android:id/list"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
		<TextView android:id="@+id/tv_example_tip_title"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:text="@string/recall_meaning"
		  	style="@style/small_title"/>
	    <TextView
	        android:id="@+id/tv_example_answer"
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:padding="3dip"
	        android:gravity="center"
	        android:background="@color/white"
	        android:textColor="@color/white"/>
	        
	    <LinearLayout 
	    	android:layout_width="fill_parent"  
	    	style="@style/button_bar"
	    	android:layout_height="wrap_content" 
	    	android:orientation="vertical">
	    	<Button android:id="@+id/btn_example_show_answer"
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content" 
	    		android:text="@string/show_answer"/>
		    <LinearLayout android:id="@+id/ll_example_button_bar" 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="wrap_content" 
			    android:orientation="horizontal" 
			    android:visibility="gone">
		    	<Button android:id="@+id/btn_example_mastered" 
		    		android:layout_weight="1"
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/mastered"/>
		    	<Button android:id="@+id/btn_example_pass" 
		    		android:layout_weight="1"
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/pass"/>
		    	<Button android:id="@+id/btn_example_forgot" 
		    		android:layout_weight="1"
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/forgot"/>
		    </LinearLayout>	
	    </LinearLayout>
	        
	        
	        
	        
 	</LinearLayout>         
	<TextView android:id="@android:id/empty"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Empty set"/>
 </LinearLayout>
