<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  	<!-- 
  	<ProgressBar
  		android:id="@+id/pb_learn_progress"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    style="?android:attr/progressBarStyleHorizontal"  
	    android:minHeight="5dip"	
	    android:maxHeight="5dip"
  		android:progress="50"/>
  	 -->
	<TextView  
		android:id="@+id/headword"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:textSize="30dip"
	    android:layout_marginBottom="5dip"/>
	<TextView  
		android:id="@+id/phonetic"
		style="@style/phonetic_symbol"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginBottom="5dip"/>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1">	
		<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView  
				android:id="@+id/meaning"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:textSize="20dip"/>  
	    </ScrollView>
	</LinearLayout>
	<!-- 
  	<ProgressBar
  		android:id="@+id/pb_learn_unit_progress"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    style="?attr/android:progressBarStyleHorizontal"  
	    android:minHeight="5dip"	
	    android:maxHeight="5dip"
  		android:progress="50"/>
  	-->
    <Button 
    	android:id="@+id/btn_learn_close_unit"
	    android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:enabled="false"
	    android:text="@string/close_unit"/>  	
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal"
	  style="@style/button_bar">  
	    <Button 
	    	android:id="@+id/btn_previous_word"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_weight="1"
		    android:text="@string/previous_word"/>
	    <Button 
	    	android:id="@+id/btn_mastered_word"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_weight="1"
		    android:text="@string/ignore_word"/> 
	    <Button 
	    	android:id="@+id/btn_next_word"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_weight="1"
		    android:text="@string/next_word"/> 
		<!-- 
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:layout_weight="1"
		  android:orientation="horizontal"
		  android:gravity="right">  
		    <Button 
		    	android:id="@+id/btn_next_word"
		    	android:width="100dip"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="next&gt;"
			    /> 
	    </LinearLayout>
	    -->
	</LinearLayout>
</LinearLayout>
