<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">  
    <!-- 
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/current_course_title"
	    style="@style/summary_item_key"/>  
	-->
	<TextView  android:id="@+id/current_course_name"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/select_course_first" 
	    android:ellipsize="end"
	    style="@style/title"/>
	    <!--   
	    android:scrollHorizontally="true"
	    android:focusable="true"
	    android:focusableInTouchMode="true"
	    -->
	<LinearLayout
	  android:id="@+id/ll_summary_study"
	  android:orientation="horizontal"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginLeft="25dip"
	  android:layout_marginRight="25dip"
	  android:gravity="center_vertical">  
	  	<ProgressBar
	  		android:id="@+id/pb_summary_progress"
	  		android:layout_weight="1"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    style="?attr/android:progressBarStyleHorizontal" 
		    android:minHeight="10dip"	
		    android:maxHeight="10dip"/>
		<TextView
			android:id="@+id/tv_summary_pg_title"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft="5dip" 
		    android:text="@string/current_course_progress_title"/>
		<Button android:id="@+id/btn_learn"  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="5dip" 
		    android:text="@string/go_on_study"/>
	</LinearLayout>
	<!--  
	<TextView
		android:id="@+id/tv_summary_pg_title"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/current_course_progress_title"
	    style="@style/summary_item_key"/>
	-->  
	<View style="@style/split"/>
	<TextView 	  
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="Everyday English"/>
	
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal"
	  style="@style/button_bar">  
		<ImageButton android:id="@+id/btn_units"  
		    android:layout_width="wrap_content" 
		    android:layout_height="45dip" 
		    android:scaleType="centerInside"
		    android:layout_weight="1"
		    android:src="@drawable/clock"/>
		<ImageButton android:id="@+id/btn_sel_course"  
		    android:layout_width="wrap_content" 
		    android:layout_height="45dip" 
		    android:scaleType="centerInside"
		    android:layout_weight="1"
		    android:src="@drawable/bookcase"/>
		<ImageButton android:id="@+id/btn_lookup"  
		    android:layout_width="wrap_content" 
		    android:layout_height="45dip" 
		    android:scaleType="centerInside"
		    android:layout_weight="1"
		    android:src="@drawable/search"/>
		<ImageButton android:id="@+id/btn_settings"  
		    android:layout_width="wrap_content" 
		    android:layout_height="45dip" 
		    android:scaleType="centerInside"
		    android:layout_weight="1"
		    android:src="@drawable/advanced_options"/>
	</LinearLayout>	
</LinearLayout>
